# fenics_utils

./: LICENSE  README.md  requirements.txt  setup.cfg
src/fenics_utils/: bcs.py  mesh.py  utils.py
src/fenics_utils/formulation/: cfd.py  eigen.py  heat.py  phase_field.py
src/fenics_utils/mesh/: __init__.py  external.py  helpers.py  utils.py
src/fenics_utils/setups/: cfd.py  eigen.py  heat.py  poisson.py
src/fenics_utils/solvers/: eigen.py  linear.py  utils.py
src/fenics_utils/time_dependent/: solving.py
