[metadata]
name = fenics_utils
version = attr: fenics_utils.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = Utils to facilitate interaction with fenics
long_description = file: README.md
url = https://github.com/fenics_utils
project_urls =
	Bug Tracker = https://github.com/fenics_utils/issues
classifiers = 
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.7

[options.packages.find]
where = src


